# codemap

./: .codemap.yml  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  PR_COMMAND.md  README.md  Taskfile.yml  index.html  install.sh  mkdocs.bak  mkdocs.yml  objects.inv  pre-release  pyproject.toml  pytest.ini  sitemap.xml  test_pr_command.py  versions.json
.codemap_cache/: .gitignore
.cursor/rules/: best-practices.mdc  terminal.mdc  testing.mdc
.github/: CONTRIBUTING.md
.github/workflows/: lint.yml  release.yml  tests.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/acknowledgements/: index.html
0.1.0/api/: index.html
0.1.0/contributing/: index.html
0.1.0/installation/: index.html
0.1.0/search/: search_index.json
0.1.0/usage/: index.html
0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
0.2.0-rc.2/: 404.html  index.html  objects.inv  sitemap.xml
0.2.0-rc.2/acknowledgements/: index.html
0.2.0-rc.2/api/: index.html
0.2.0-rc.2/contributing/: index.html
0.2.0-rc.2/installation/: index.html
0.2.0-rc.2/search/: search_index.json
0.2.0-rc.2/usage/: index.html
0.2.0/acknowledgements/: index.html
0.2.0/api/: index.html
0.2.0/contributing/: index.html
0.2.0/installation/: index.html
0.2.0/search/: search_index.json
0.2.0/usage/: index.html
0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
0.3.0-rc.2/: 404.html  index.html  objects.inv  sitemap.xml
0.3.0-rc.2/acknowledgements/: index.html
0.3.0-rc.2/api/: index.html
0.3.0-rc.2/contributing/: index.html
0.3.0-rc.2/installation/: index.html
0.3.0-rc.2/search/: search_index.json
0.3.0-rc.2/usage/: index.html
0.3.0-rc.5/: 404.html  index.html  sitemap.xml
0.3.0-rc.5/acknowledgements/: index.html
0.3.0-rc.5/api/: index.html
0.3.0-rc.5/contributing/: index.html
0.3.0-rc.5/installation/: index.html
0.3.0-rc.5/search/: search_index.json
0.3.0-rc.5/usage/: index.html
0.3.0/acknowledgements/: index.html
0.3.0/api/: index.html
0.3.0/contributing/: index.html
0.3.0/installation/: index.html
0.3.0/search/: search_index.json
0.3.0/usage/: index.html
0.3.1-rc.1/: 404.html  index.html  objects.inv  sitemap.xml
0.3.1-rc.1/acknowledgements/: index.html
0.3.1-rc.1/api/: index.html
0.3.1-rc.1/contributing/: index.html
0.3.1-rc.1/installation/: index.html
0.3.1-rc.1/search/: search_index.json
0.3.1-rc.1/usage/: index.html
0.3.1-rc.2/: 404.html  index.html  objects.inv  sitemap.xml
0.3.1-rc.2/acknowledgements/: index.html
0.3.1-rc.2/api/: index.html
0.3.1-rc.2/contributing/: index.html
0.3.1-rc.2/installation/: index.html
0.3.1-rc.2/search/: search_index.json
0.3.1-rc.2/usage/: index.html
0.3.1-rc.3/: 404.html  index.html  objects.inv  sitemap.xml
0.3.1-rc.3/acknowledgements/: index.html
0.3.1-rc.3/api/: index.html
0.3.1-rc.3/contributing/: index.html
0.3.1-rc.3/installation/: index.html
0.3.1-rc.3/search/: search_index.json
0.3.1-rc.3/usage/: index.html
acknowledgements/: index.html
api/: index.html
api/pre-release/: index.html
api/stable/: index.html
contributing/: index.html
contributing/code-of-conduct/: index.html
contributing/guidelines/: index.html
deployment/: README.md
deployment/supervisor/: codemap.conf  install.sh
deployment/systemd/: codemap.service  install.sh
docs/: index.md  installation.md
docs/api/: index.md
docs/contributing/: code-of-conduct.md  guidelines.md  index.md
docs/todo/: commit_cmd.md  dev.md  gen_cmd.md  init_cmd.md  pr_cmd.md
docs/usage/: commit.md  configuration.md  generate.md  pr.md
examples/: documentation.code-map.20250218_163500.md  documentation.code-map.20250218_180052.md
installation/: index.html
pre-release/: 404.html  index.html  sitemap.xml
pre-release/acknowledgements/: index.html
pre-release/api/: index.html
pre-release/contributing/: index.html
pre-release/installation/: index.html
pre-release/search/: search_index.json
pre-release/usage/: index.html
scripts/: codestruct_convert.py  discover_scm_files.py  install.sh  sync_scm_files.py  uninstall.sh  update_api_docs.py  upgrade.sh  utils.py
scripts/tree-sitter/: __init__.py  direct_parser.py  fetch_grammar_sources.py  gen_lang_map.py  gen_schema_annotation.py  gen_ts_schema.py  gen_ts_types.py  get_nodes.py
search/: search_index.json
src/: config.py
src/codemap/: __init__.py  __main__.py  cli.py  cli_app.py  cli_entry.py  config.py  git.py
src/utils/: __init__.py  config_loader.py
tests/: TODO.md  base.py  conftest.py  helpers.py  test_analyzer.py  test_analyzer_processor.py  test_cli.py  test_cli_entry.py  test_cli_utils.py  test_commit.py  test_commit_cmd.py  test_commit_interactive.py  test_commit_workflow.py  test_config.py  test_erd_generator.py  test_file_filters.py  test_file_utils.py  test_generate_cmd.py  test_git_analyzer.py  test_git_command.py  test_git_utils.py  test_init_cmd.py  test_lance_storage.py  test_llm_integration.py  test_lsp_analyzer.py  test_lsp_integration.py  test_main.py  test_markdown_generator.py  test_pipeline.py  test_pr_command.py  test_pr_utils.py  test_processor.py  test_regexp_chunker.py  test_semantic_chunking.py  test_syntax_chunker.py  test_syntax_chunker_javascript.py  test_syntax_chunker_python.py  test_syntax_chunker_typescript.py  test_tree_parser.py  test_watcher.py
tests/cli/: test_commit_cmd.py  test_gen_cmd.py
tests/db/: conftest.py  test_client.py  test_engine.py  test_models.py
tests/git/: test_git_command.py  test_git_utils.py
tests/integration_test/: test_kuzu_manager.py
tests/llm/: test_api.py  test_client.py  test_llm_integration.py  test_utils.py
tests/processor/: test_chunking.py  test_kuzu_manager.py  test_lod.py  test_pipeline.py  test_qdrant_manager.py  test_vector_synchronizer.py
tests/utils/: storage_utils.py  test_cli_utils.py  test_config.py  test_file_filters.py  test_file_utils.py  test_git_utils.py  test_llm_utils.py  test_path_utils.py  test_pr_strategies.py  test_pr_templates.py  test_pr_utils.py
usage/: index.html
usage/commit/: index.html
(+1575 files in other folders)
