[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codemap"
version = "0.3.6"
description = "CLI tool for generating optimized markdown documentation from codebases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.65.4.post1",
    "numpy>=1.26.4",
    "pygments>=2.19.1",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "questionary>=2.1.0",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "typer>=0.15.1",
    "typing-extensions>=4.9.0",
    "sentence-transformers>=2.7.0",
]

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "pylint>=2.17.7",
    "pytest>=7.4.4",
    "ruff>=0.9.6",
]

[tool.pyright]
disableOrganizeImports = true
ignore = ["*"]
typeCheckingMode = "off"

[project.scripts]
codemap = "codemap.cli_entry:main"

[tool.pytest]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py38"

# Exclude files/directories
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "vendor"
]

[tool.ruff.lint]
# Enable all rules by default, then selectively disable
select = ["ALL"]
ignore = [
    # Rules that conflict with other tools/preferences
    "D203",  # one-blank-line-before-class
    "D212",  # multi-line-summary-first-line
    "FBT001",  # Boolean positional arg in function definition (required for typer)
    "FBT002",  # Boolean default value in function definition (required for typer)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "PLR2004", "ANN002", "ANN003"]
"src/codemap/cli/main.py" = ["ARG001"]  # Allow unused arguments in CLI functions (for API compatibility)

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-statements = 50

[tool.ruff.lint.pydocstyle]
convention = "google" 
